--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        s
+    <div id="sketchContainer">
+        
+
+        <script src="script.js"></script>
     </div>
 </body>
 </html>
