--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="sketchContainer">
-        
+        <div class="boxes">
+
+        </div>
 
         <script src="script.js"></script>
     </div>
