--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="sketchContainer">
+    <h1>Sketch Flow</h1>
+    <h3>Smooth and dynamic art with your Mouse!</h3>
+    <label for="name">Enter Grid size</label>
+    <input type="number" id="gridSize" name="name" required minlength="1" maxlength="3" size="3" placeholder="Enter a Size">
+    <button>Enter</button>
+    <div class="sketchContainer">
         <div class="boxes">
 
         </div>
 
         <script src="script.js"></script>
     </div>
+
 </body>
 </html>
