was able to create a grid

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <label for="name">Enter Grid size</label>
     <input type="number" id="gridSize" name="name" required minlength="1" maxlength="3" size="3" placeholder="Enter a Size">
     <button>Enter</button>
-    <div class="sketchContainer">
-        <div class="boxes">
 
-        </div>
+    <div class="sketchContainer"></div>
 
         <script src="script.js"></script>
     </div>
