trying to figure out event listener and getting the grid back

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <h3>Smooth and dynamic art with your Mouse!</h3>
     <label for="name">Enter Grid size</label>
     <input type="number" id="gridSize" name="name" required minlength="1" maxlength="3" size="3" placeholder="Enter a Size">
-    <button>Enter</button>
+    <button id="startButton">Enter</button>
 
     <div class="sketchContainer"></div>
+
+    <div id="appInfo"></div>
 
         <script src="script.js"></script>
     </div>
