developed a better aesthetic with the Headers label and input and the grid positioned below

--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 <body>
     <h1>Sketch Flow</h1>
     <h3>Smooth and dynamic art with your Mouse!</h3>
+    <div class="form-container">
     <label for="name">Enter Grid size</label>
+    <div id="appInfo"></div>
     <input type="number" id="gridSize" name="name" required minlength="1" maxlength="3" size="3" placeholder="Enter a Size">
     <button id="startButton">Enter</button>
+    </div>
+
+   
 
     <div class="sketchContainer"></div>
 
-    <div id="appInfo"></div>
+    
 
         <script src="script.js"></script>
     </div>
