--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 
 <div id="appInfo"></div>
 
-<button class="blkbtn">Black</button> <button class="colorbtn">Color</button>
+<button class="blkBtn">Black</button> <button class="colorBtn">Color</button>
 
 
-
-   
 
     <div class="sketchContainer"></div>
     
