finally got the mouse to sketch black on the canvas

--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
 
 <div id="appInfo"></div>
 
-<button class="blkBtn">Black</button> <button class="colorBtn">Color</button>
+<button class="blkBtn">Black</button> 
+
+<button class="colorBtn">Color</button>
 
 
 
     <div class="sketchContainer"></div>
     
+    <div class="cell"></div>
     
 
         <script src="script.js"></script>
