aligned buttons and added readme

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
 <div id="appInfo"></div>
 
+
+<div class="theButtons">
 <button class="blkBtn">Black</button> 
-
 <button class="colorBtn">Color</button>
-
-
+</div>
 
     <div class="sketchContainer"></div>
     
